2008-06-10  Tomas Frydrych  <tf@o-hand.com>

	* src/mb/hd-theme.c:
	* src/mb/hd-theme.h:
	Added HdThemeSimple, subclass of MBWMTheme, to simplify testing
	in the absence of real, png-based theme.

2008-06-10  Tomas Frydrych  <tf@o-hand.com>

	* src/main.c:
	* src/mb/Makefile.am:
	* src/mb/hd-theme.h:
	* src/mb/hd-theme.c:
	Start start of a customized MBWMTheme subclass.

2008-06-10  Tomas Frydrych  <tf@o-hand.com>

	Restructured source tree to improve clarity:

	* src/mb:   Matchbox subclasses,
	* src/home: Home (clutter subclasses),
	* src/util: Auxiliary stuff.

2008-06-09  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-switcher-group.c:
	(hd_switcher_group_zoom):
	Fixed group position before zoom effect.

2008-06-09  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-home.c:
	Correctly terminate applet resizing when release lands outside of
	the resize button.

2008-06-09  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-atoms.c:
	* src/hd-atoms.h:
	* src/hd-home.c:
	Hooked up settings button.

	* src/hd-applet-test.c:
	Added ClientMessage handler.

2008-06-09  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-home.c:
	Applet resizing.

2008-06-09  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-home-view.c:
	* src/hd-home.c:
	* src/hd-home.h:
	Applet dragging.

2008-06-09  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-comp-mgr.c:
	(hd_comp_mgr_class_init):
	Fixed typo.

	* src/hd-home.c:
	Hooked up applet close button.

2008-06-09  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-home-view.c:
	* src/hd-home.c:
	* src/hd-home.h:
	Added edit mode applet decors and signal handlers.

2008-06-05  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-home-view.c:
	* src/hd-home-view.h:
	* src/hd-home.c:
	Start of Home edit mode.

2008-06-05  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-atoms.c:
	* src/hd-atoms.h:
	* src/hd-home.c:
	Added simple ClientMessage-based mechanism for applet-initiated
	home panning.

	* src/hd-applet-test.c:
	Simple Home applet.

2008-06-05  Tomas Frydrych  <tf@o-hand.com>
